# 2023-computer-adventures

./: Cargo.toml  README.md
.github/workflows/: rust.yml  static.yml
client/: index.html
client/css/: styles.css
client/js/: game_over.js  index.js  output.js  promotion.js
profiling/: alpha_beta.pb  alpha_beta_evaluation_with_mobility.pb  alpha_beta_optimized_evaluation.pb  minimax.pb  profile.pb
src/: evaluate.rs  lib.rs  main.rs  search.rs
