[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chess = "3.2.0"
counter = "0.5.7"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
pprof = { version = "0.3", features = ["protobuf"] }
