[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"
description = "WebAssembly chess engine"
repository = "https://github.com/MinecraftU/2023-computer-adventures"
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chess = "3.2.0"
wasm-bindgen = "0.2"

[dev-dependencies]
pprof = { version = "0.3", features = ["protobuf"] }
